--- a/tools.html
+++ b/tools.html
@@ -267,7 +267,7 @@
                     <div class="flex flex-col md:flex-row gap-6">
                         <div class="w-full md:w-2/5">
                             <label for="qr-data" class="block text-sm font-medium mb-2">URL或其他文本:</label>
-                            <textarea id="qr-data" class="w-full h-48 p-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">https://tool.oschina.net/qr</textarea>
+                            <textarea id="qr-data" class="w-full h-48 p-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">https://xyrj.dpdns.org</textarea>
                         </div>
                         <div class="w-full md:w-1/5 space-y-2 flex flex-col">
                             <label class="text-sm">输出格式: <select id="qr-output" class="w-full border rounded-md p-1 dark:bg-gray-700 dark:border-gray-600"><option value="image/png" selected>PNG</option><option value="image/gif">GIF</option><option value="image/jpeg">JPEG</option></select></label>
