--- a/tools.html
+++ b/tools.html
@@ -45,7 +45,7 @@
         const pageTools = [
             { id: '2fa', name: '2FA工具', icon: 'fas fa-shield-check', template: 'tool2FAContent' },
             { id: 'qrcode', name: '在线生成二维码', icon: 'fas fa-qrcode', template: 'toolQRCodeContent' },
-            { id: 'text', name: '文本处理', icon: 'fas fa-file-alt', template: 'toolComingSoonContent' },
+            { id: 'text', name: '文本处理', icon: 'fas fa-file-alt', template: 'toolTextProcessingContent' },
             { id: 'image', name: '图片处理', icon: 'fas fa-image', template: 'toolComingSoonContent' },
             { id: 'more', name: '更多工具', icon: 'fas fa-ellipsis-h', template: 'toolComingSoonContent' }
         ];
@@ -183,6 +183,56 @@
             outputImg.style.display = 'block';
         };
 
+        App.updateTextToolCharCount = function() {
+            const textarea = document.getElementById('text-processing-input');
+            const counter = document.getElementById('text-char-counter');
+            if (textarea && counter) {
+                counter.textContent = `${textarea.value.length} / 5000`;
+            }
+        };
+
+        App.handleTextTransform = function(action) {
+            const textarea = document.getElementById('text-processing-input');
+            if (!textarea) return;
+            let text = textarea.value;
+            let result = text;
+
+            switch (action) {
+                case 'uppercase': result = text.toUpperCase(); break;
+                case 'lowercase': result = text.toLowerCase(); break;
+                case 'capitalize': result = text.replace(/\b\w/g, char => char.toUpperCase()); break;
+                case 'un-capitalize': result = text.replace(/\b\w/g, char => char.toLowerCase()); break;
+                case 'sentence-case': result = text.toLowerCase().replace(/(^\s*\w|[.!?]\s*\w)/g, c => c.toUpperCase()); break;
+                case 'title-case': result = text.toLowerCase().split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' '); break;
+                case 'pinyin': this.showToast("功能开发中", "汉字转拼音功能敬请期待。"); return;
+                case 'copy': navigator.clipboard.writeText(text).then(() => this.showToast("操作成功", "内容已复制到剪贴板。")).catch(() => this.showToast("操作失败", "无法复制内容。")); return;
+                case 'cut': navigator.clipboard.writeText(text).then(() => { textarea.value = ''; this.updateTextToolCharCount(); this.showToast("操作成功", "内容已剪切到剪贴板。"); }).catch(() => this.showToast("操作失败", "无法剪切内容。")); return;
+                case 'clear': textarea.value = ''; break;
+                case 'space-to-underscore': result = text.replace(/ /g, '_'); break;
+                case 'underscore-space-to-camel': result = text.replace(/[\s_]+(\w)/g, (match, letter) => letter.toUpperCase()); break;
+                case 'camel-to-underscore': result = text.replace(/([A-Z])/g, "_$1").toLowerCase().replace(/^_/, ''); break;
+                case 'camel-to-space': result = text.replace(/([a-z])([A-Z])/g, '$1 $2'); break;
+                case 'space-to-hyphen': result = text.replace(/ /g, '-'); break;
+                case 'hyphen-to-underscore': result = text.replace(/-/g, '_'); break;
+                case 'underscore-to-space': result = text.replace(/_/g, ' '); break;
+                case 'underscore-to-dot': result = text.replace(/_/g, '.'); break;
+                case 'dot-to-underscore': result = text.replace(/\./g, '_'); break;
+                case 'space-to-newline': result = text.replace(/ /g, '\n'); break;
+                case 'newline-to-space': result = text.replace(/\n/g, ' '); break;
+                case 'clear-linenumbers': result = text.replace(/^\s*\d+\s*?/gm, ''); break;
+                case 'clear-spaces': result = text.replace(/\s/g, ''); break;
+                case 'clear-newlines': result = text.replace(/[\r\n]/g, ''); break;
+            }
+
+            textarea.value = result;
+            this.updateTextToolCharCount();
+            
+            const autoCopy = document.querySelector('input[name="auto-copy"]:checked').value;
+            if (autoCopy === 'yes') {
+                navigator.clipboard.writeText(result).then(() => this.showToast("自动复制成功", "转换结果已复制到剪贴板。")).catch(() => {});
+            }
+        };
+
         App.router = async function() {
             if (this.state.twoFaTimer) clearInterval(this.state.twoFaTimer);
             this.state.currentTotpObject = null;
@@ -199,6 +249,9 @@
             this.initStickySidebar();
             if (this.state.activeToolId === 'qrcode') {
                 this.handleGenerateQRCode();
+            }
+            if (this.state.activeToolId === 'text') {
+                this.updateTextToolCharCount();
             }
         };
 
@@ -258,7 +311,7 @@
                             <p>最近维护： 2023年10月22日</p>
                         </div>
                     </div>
-                     <div class="text-center mt-8 text-xs text-gray-400">©2025 在线工具</div>
+                     <div class="text-center mt-8 text-xs text-gray-400">?2025 在线工具</div>
                 </div>
             `,
             toolQRCodeContent: () => `
@@ -283,6 +336,53 @@
                                 <img id="qr-code-output-img" alt="Generated QR Code" style="display: none; max-width: 100%; max-height: 100%;">
                              </div>
                         </div>
+                    </div>
+                </div>
+            `,
+            toolTextProcessingContent: () => `
+                <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
+                    <h2 class="text-xl font-semibold mb-4">文本处理工具</h2>
+                    <div class="relative">
+                        <textarea id="text-processing-input" oninput="App.updateTextToolCharCount()" class="w-full h-48 p-3 border rounded-md dark:bg-gray-700 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="请把你要转换的内容粘贴在这里"></textarea>
+                        <div id="text-char-counter" class="absolute bottom-3 right-3 text-sm text-gray-400">0 / 5000</div>
+                    </div>
+                    <div class="mt-4 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8 gap-2 text-sm">
+                        <button onclick="App.handleTextTransform('uppercase')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">全大写 AB</button>
+                        <button onclick="App.handleTextTransform('lowercase')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">全小写 ab</button>
+                        <button onclick="App.handleTextTransform('capitalize')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">首字母大写 Aa Bb</button>
+                        <button onclick="App.handleTextTransform('un-capitalize')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">首字母小写 aA bB</button>
+                        <button onclick="App.handleTextTransform('sentence-case')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">句子首字母大写</button>
+                        <button onclick="App.handleTextTransform('title-case')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">标题大小写</button>
+                        <button onclick="App.handleTextTransform('pinyin')" class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">汉字转拼音</button>
+                        <button onclick="App.handleTextTransform('copy')" class="p-2 bg-orange-500 text-white rounded-md hover:bg-orange-600">复制</button>
+                        <button onclick="App.handleTextTransform('cut')" class="p-2 bg-orange-500 text-white rounded-md hover:bg-orange-600">剪切</button>
+                        <button onclick="App.handleTextTransform('clear')" class="p-2 bg-red-500 text-white rounded-md hover:bg-red-600">清空</button>
+                    </div>
+                    <div class="mt-2 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-7 gap-2 text-sm">
+                        <button onclick="App.handleTextTransform('space-to-underscore')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">空格→下划线</button>
+                        <button onclick="App.handleTextTransform('underscore-space-to-camel')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">下划线&空格→驼峰</button>
+                        <button onclick="App.handleTextTransform('camel-to-underscore')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">驼峰→下划线</button>
+                        <button onclick="App.handleTextTransform('camel-to-space')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">驼峰→空格</button>
+                        <button onclick="App.handleTextTransform('space-to-hyphen')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">空格→中横线</button>
+                        <button onclick="App.handleTextTransform('hyphen-to-underscore')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">中横线→下划线</button>
+                        <button onclick="App.handleTextTransform('underscore-to-space')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">下划线→空格</button>
+                        <button onclick="App.handleTextTransform('underscore-to-dot')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">下划线→小数点</button>
+                        <button onclick="App.handleTextTransform('dot-to-underscore')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">小数点→下划线</button>
+                        <button onclick="App.handleTextTransform('space-to-newline')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">空格→换行</button>
+                        <button onclick="App.handleTextTransform('newline-to-space')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">换行→空格</button>
+                        <button onclick="App.handleTextTransform('clear-linenumbers')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">清除行号</button>
+                        <button onclick="App.handleTextTransform('clear-spaces')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">清除空格</button>
+                        <button onclick="App.handleTextTransform('clear-newlines')" class="p-2 bg-green-600 text-white rounded-md hover:bg-green-700">清除换行</button>
+                    </div>
+                    <div class="mt-6 border-t dark:border-gray-700 pt-4 text-sm text-gray-600 dark:text-gray-400 space-y-2">
+                        <div class="flex items-center gap-4">
+                            <span class="flex-shrink-0">转换后自动复制结果:</span>
+                            <label class="flex items-center gap-1"><input type="radio" name="auto-copy" value="no" checked class="h-4 w-4"> 否</label>
+                            <label class="flex items-center gap-1"><input type="radio" name="auto-copy" value="yes" class="h-4 w-4"> 是</label>
+                        </div>
+                    </div>
+                    <div class="mt-4 text-xs text-gray-500">
+                        <p><span class="font-bold">提示:</span> 首字母大写仅在英文单词有空格的情况下才有效; 句子首字母大写仅在". "后的第一个单词有效; "标题大小写"目前的全大写单词有过滤比较少, 大家可以反馈提交。</p>
                     </div>
                 </div>
             `,
