--- a/tools.html
+++ b/tools.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sticky-sidebar-v2/dist/sticky-sidebar.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/otpauth@9.1.4/dist/otpauth.umd.min.js"></script>
     
-    <script src="https://unpkg.com/pinyin-pro/dist/pinyin-pro.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pinyin-pro@3.27.0/dist/index.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
 
