--- a/tools.html
+++ b/tools.html
@@ -42,7 +42,7 @@
     <script>
         const pageTools = [
             { id: '2fa', name: '2FA工具', icon: 'fas fa-shield-check', template: 'tool2FAContent' },
-            { id: 'qrcode', name: '在线生成二维码', icon: 'fas fa-qrcode', template: 'toolQRCodeContent' },
+            { id: 'qrcode', name: '生成二维码', icon: 'fas fa-qrcode', template: 'toolQRCodeContent' },
             { id: 'text', name: '文本处理', icon: 'fas fa-file-alt', template: 'toolTextProcessingContent' },
             { id: 'image', name: '图片处理', icon: 'fas fa-image', template: 'toolComingSoonContent' },
             { id: 'more', name: '更多工具', icon: 'fas fa-ellipsis-h', template: 'toolComingSoonContent' }
@@ -299,14 +299,14 @@
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
                     <h2 class="text-xl font-semibold mb-1">2FA验证</h2>
                     <p class="text-sm text-gray-500 mb-6">双重验证/二步验证码获取工具 (相当于谷歌身份验证器的网页版)，使用时任选一种方式输入密钥即可。</p>
-                    <input type="text" id="2fa-secret" placeholder="点击此处输入密钥" class="w-full px-4 py-3 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:bg-gray-700 dark:border-green-700 dark:text-gray-200">
+                    <input type="text" id="2fa-secret" placeholder="点击此处输入密钥" class="w-full px-4 py-3 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:bg-gray-700 dark:border-green-700 dark:text-gray-200 placeholder:text-red-500 placeholder:font-bold">
                     <button onclick="App.handle2FAGenerate()" class="w-full mt-4 bg-green-500 text-white font-bold py-3 rounded-md hover:bg-green-600 transition-colors">点击获取验证码</button>
                     <div class="mt-6 text-sm space-y-3 text-gray-700 dark:text-gray-300">
-                        <p>双重密钥为：<span id="2fa-secret-display" class="font-mono"></span></p>
+                        <p>双重密钥为：<span id="2fa-secret-display" class="font-mono font-bold text-black dark:text-white"></span></p>
                         <p>当前验证码：<span id="2fa-code" class="font-bold text-lg text-red-500">------</span></p>
                         <div class="flex justify-between items-center">
                             <p>剩余时间： <span id="2fa-time">--</span> 秒</p>
-                            <button onclick="App.openQrCodeModal()" class="bg-blue-500 text-white text-xs px-3 py-1.5 rounded-md hover:bg-blue-600 transition-colors">生成二维码</button>
+                            <button onclick="App.openQrCodeModal()" class="bg-green-500 text-white text-xs px-3 py-1.5 rounded-md hover:bg-green-600 transition-colors">生成二维码</button>
                         </div>
                     </div>
                     <div class="mt-8 border-t dark:border-gray-700 pt-6">
@@ -326,7 +326,7 @@
                     <div class="flex flex-col md:flex-row gap-6">
                         <div class="w-full md:w-2/5">
                             <label for="qr-data" class="block text-sm font-medium mb-2">URL或其他文本:</label>
-                            <textarea id="qr-data" class="w-full h-48 p-2 border rounded-md dark:bg-gray-700 dark:border-gray-600">https://xyrj.dpdns.org</textarea>
+                            <textarea id="qr-data" class="w-full h-48 p-2 dark:bg-gray-700 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:border-green-700">https://xyrj.dpdns.org</textarea>
                         </div>
                         <div class="w-full md:w-1/5 space-y-2 flex flex-col">
                             <label class="text-sm">输出格式: <select id="qr-output" class="w-full border rounded-md p-1 dark:bg-gray-700 dark:border-gray-600"><option value="image/png" selected>PNG</option><option value="image/gif">GIF</option><option value="image/jpeg">JPEG</option></select></label>
@@ -349,7 +349,7 @@
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
                     <h2 class="text-xl font-semibold mb-4">文本处理工具</h2>
                     <div class="relative">
-                        <textarea id="text-processing-input" oninput="App.updateTextToolCharCount()" class="w-full h-48 p-3 border rounded-md dark:bg-gray-700 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="请把你要转换的内容粘贴在这里"></textarea>
+                        <textarea id="text-processing-input" oninput="App.updateTextToolCharCount()" class="w-full h-48 p-3 dark:bg-gray-700 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:border-green-700" placeholder="请把你要转换的内容粘贴在这里"></textarea>
                         <div id="text-char-counter" class="absolute bottom-3 right-3 text-sm text-gray-400">0 / 5000</div>
                     </div>
                     <div class="mt-4 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8 gap-2 text-sm">
