--- a/tools.html
+++ b/tools.html
@@ -138,16 +138,28 @@
 
         App.start2FATimer = function(totp) {
             const update = () => {
-                const token = totp.generate();
                 const remainingTime = totp.period - (Math.floor(Date.now() / 1000) % totp.period);
+
+                if (remainingTime === 0) {
+                    document.getElementById('2fa-code').innerHTML = '<span class="text-sm">已超时，需要重新点击按钮获取！</span>';
+                    document.getElementById('2fa-time').textContent = '0';
+                    clearInterval(this.state.twoFaTimer);
+                    this.state.twoFaTimer = null;
+                    return;
+                }
+                
+                const token = totp.generate();
                 document.getElementById('2fa-code').textContent = token;
                 document.getElementById('2fa-time').textContent = remainingTime;
-                if (remainingTime === 30 || !this.state.twoFaTimer) {
+
+                if ((remainingTime === 30 || !this.state.twoFaTimer) && document.hasFocus()) {
                      navigator.clipboard.writeText(token).then(() => {
                         this.showToast("已成功获取验证码哦~", "已成功复制");
                     }).catch(err => { console.error('Failed to copy: ', err); });
                 }
             };
+            
+            if (this.state.twoFaTimer) clearInterval(this.state.twoFaTimer);
             update();
             this.state.twoFaTimer = setInterval(update, 1000); 
         };
