--- a/tools.html
+++ b/tools.html
@@ -268,7 +268,7 @@
                 <div class="flex-grow">
                     ${App.templates.header()}
                     <main class="max-w-7xl mx-auto w-full p-4 sm:px-6">
-                        <div class="flex flex-col lg:flex-row gap-6 main-container">
+                        <div class="flex flex-col lg:flex-row lg:space-x-6 main-container">
                             <div class="w-full lg:w-1/5 lg:max-w-[220px] flex-shrink-0" id="tools-sidebar-wrapper">
                                 <div class="sidebar-inner-wrapper">
                                     ${App.templates.toolSidebar()}
