--- a/tools.html
+++ b/tools.html
@@ -301,7 +301,7 @@
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
                     <h2 class="text-xl font-semibold mb-1">2FA验证</h2>
                     <p class="text-sm text-gray-500 mb-6">双重验证/二步验证码获取工具 (相当于谷歌身份验证器的网页版)，使用时任选一种方式输入密钥即可。</p>
-                    <input type="text" id="2fa-secret" placeholder="点击此处输入密钥" class="w-full px-4 py-3 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:bg-gray-700 dark:border-green-700 dark:text-gray-200 placeholder:text-red-500 placeholder:font-bold">
+                    <input type="text" id="2fa-secret" placeholder="点击此处输入密钥" class="w-full px-4 py-3 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:border-green-700 dark:text-gray-200 placeholder:text-red-500 placeholder:font-bold">
                     <button onclick="App.handle2FAGenerate()" class="w-full mt-4 bg-green-500 text-white font-bold py-3 rounded-md hover:bg-green-600 transition-colors">点击获取验证码</button>
                     <div class="mt-6 text-sm space-y-3 text-gray-700 dark:text-gray-300">
                         <p>双重密钥为：<span id="2fa-secret-display" class="font-mono font-bold text-black dark:text-white"></span></p>
