--- a/tools.html
+++ b/tools.html
@@ -204,7 +204,6 @@
                 case 'sentence-case': result = text.toLowerCase().replace(/(^\s*\w|[.!?]\s*\w)/g, c => c.toUpperCase()); break;
                 case 'title-case': result = text.toLowerCase().split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' '); break;
                 case 'pinyin':
-                    // Reverted JS call to match the pinyin-pro library
                     if (typeof pinyinPro !== 'undefined') {
                         result = pinyinPro.pinyin(text, { toneType: 'none', type: 'string' });
                     } else {
@@ -239,6 +238,33 @@
                 navigator.clipboard.writeText(result).then(() => this.showToast("自动复制成功", "转换结果已复制到剪贴板。")).catch(() => {});
             }
         };
+        
+        // ========= BROWSER COMPATIBILITY FIXER =========
+        App.applyCompatibilityFixes = function() {
+            if (this.state.theme === 'dark') {
+                setTimeout(() => {
+                    const header = document.querySelector('header');
+                    if (header) {
+                        header.style.backgroundColor = '#1f2937';
+                    }
+                    const twoFaInput = document.getElementById('2fa-secret');
+                    if (twoFaInput) {
+                        twoFaInput.style.backgroundColor = '#ffffff';
+                    }
+                }, 100);
+            } else {
+                 setTimeout(() => {
+                    const header = document.querySelector('header');
+                    if (header) {
+                        header.style.backgroundColor = '';
+                    }
+                    const twoFaInput = document.getElementById('2fa-secret');
+                    if (twoFaInput) {
+                        twoFaInput.style.backgroundColor = '';
+                    }
+                }, 100);
+            }
+        };
 
         App.router = async function() {
             if (this.state.twoFaTimer) clearInterval(this.state.twoFaTimer);
@@ -261,6 +287,7 @@
             if (this.state.activeToolId === 'text') {
                 this.updateTextToolCharCount();
             }
+            this.applyCompatibilityFixes();
         };
 
         Object.assign(App.templates, {
@@ -301,7 +328,7 @@
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
                     <h2 class="text-xl font-semibold mb-1">2FA验证</h2>
                     <p class="text-sm text-gray-500 mb-6">双重验证/二步验证码获取工具 (相当于谷歌身份验证器的网页版)，使用时任选一种方式输入密钥即可。</p>
-                    <input type="text" id="2fa-secret" placeholder="点击此处输入密钥" class="w-full px-4 py-3 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:border-green-700 dark:text-gray-200 placeholder:text-red-500 placeholder:font-bold">
+                    <input type="text" id="2fa-secret" placeholder="点击此处输入密钥" class="w-full px-4 py-3 border-2 border-green-300 rounded-md focus:outline-none focus:border-green-500 focus:ring-1 focus:ring-green-500 dark:border-green-700 placeholder:text-red-500 placeholder:font-bold">
                     <button onclick="App.handle2FAGenerate()" class="w-full mt-4 bg-green-500 text-white font-bold py-3 rounded-md hover:bg-green-600 transition-colors">点击获取验证码</button>
                     <div class="mt-6 text-sm space-y-3 text-gray-700 dark:text-gray-300">
                         <p>双重密钥为：<span id="2fa-secret-display" class="font-mono font-bold text-black dark:text-white"></span></p>
@@ -314,12 +341,12 @@
                     <div class="mt-8 border-t dark:border-gray-700 pt-6">
                         <h3 class="font-semibold mb-2 text-gray-800 dark:text-gray-200">2FA工具说明</h3>
                         <div class="text-xs text-gray-600 dark:text-gray-400 leading-relaxed space-y-1">
-                            <p>演示密钥: <code class="bg-gray-100 dark:bg-gray-700 p-1 rounded-md text-red-500 cursor-pointer" onclick="document.getElementById('2fa-secret').value = this.textContent; App.handle2FAGenerate();">7J64V3P3E77J3LKNUGS25QANTLRLTKVL</code> (点击此密钥可复制并生成)</p>
+                            <p>演示密钥: <code class="bg-gray-100 dark:bg-gray-700 p-1 rounded-md text-red-500 cursor-pointer" onclick="document.getElementById('2fa-secret').value = this.textContent; App.handle2FAGenerate();">7J64V3P3E77J3LKNUGS2FAGenerate();">7J64V3P3E77J3LKNUGS25QANTLRLTKVL</code> (点击此密钥可复制并生成)</p>
                             <p>新手提示：必须在倒计时结束前输入验证码登录或验证，否则会失效显示错误。调试功能时必须输入正确绑定的密钥，不要随便输入字符串去调试获取功能。目前点击获取验证码的按钮后会自动复制验证码到剪切板，直接去粘贴即可。如果想要验证生成的验证码是否正确，点击生成二维码的按钮，使用谷歌验证器APP扫描添加检查。</p>
                             <p>最近维护： 2023年10月22日</p>
                         </div>
                     </div>
-                     <div class="text-center mt-8 text-xs text-gray-400">?2025 在线工具</div>
+                     <div class="text-center mt-8 text-xs text-gray-400">©2025 在线工具</div>
                 </div>
             `,
             toolQRCodeContent: () => `
